--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="subcontent-images">
                 <div class="image-1">
-                    
+                    <img src="./images/jmowlai-first-film-photo.JPG">
                     <p>My first ever photo</p>
                 </div>
             </div>
