--- a/index.html
+++ b/index.html
@@ -8,58 +8,24 @@
 </head>
 <body>
     <div class="header">
-        <div class="Logo"><img src="" alt="Landing Page"></div>
-        <div class="header-links">
-            <ul>
-                <li>Link1</li>
-                <li>Link2</li>
-                <li>Link3</li>
-            </ul>
+        <ul class="left-header">
+            Header logo
+        </ul>
+        <ul class="right-header">
+            <li>Header Link One</li>
+            <li>Header Link Two</li>
+            <li>Header Link Three</li>
+        </ul>
+    </div>
+    <div class="first-container">
+        <div class="website-info">
+            <p class="website-statement">This website is awesome</p>
+            <p class="website-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="Sign up">Sign up!</button>
+        </div>
+        <div class="website-image">
+            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo">
         </div>
     </div>
-    <div class="content">
-        <div class="main-content">
-            <div class="main-text">
-                <div class="title">
-                    <h1>Jordan Mowlai</h1>
-                </div>
-                <div class="title-info">
-                    <p>I have been working for SAS, as a Senior Associate Technical Consultant for the last 2+ years. Working mainly within the FSI sector, Jordan utilises advanced Data Analytics, Visualisation and Management to help identify fraud. </p>
-                    <p>I have a couple of hobbies that I am passionate about such as rock-climbing, bush-walking and film photography. Recently I tried to dabble into the world of cycling, but unfortuantely I got into an accident and broke my ankle. </p>            
-                </div>
-            </div>
-            <div class="main-image">
-                
-            </div>
-        </div>
-        <div class = "subcontent">
-            <div class="subcontent-title">
-                <h2>My Favourite Photos!</h2>
-            </div>
-            <div class="subcontent-images">
-                <div class="image-1">
-                    <img src="./images/jmowlai-first-film-photo.JPG">
-                    <p>My first ever photo</p>
-                </div>
-            </div>
-        </div>
-        <div class ="quote-content">
-            <div class="quote">
-
-            </div>
-            <div class="quote-speaker">
-
-            </div>
-        </div>
-        <div class="contact-content">
-
-        </div>
-    </div>
-    <div class="footer">
-        <div class="footer-content">
-            <p>Jordan Mowlai 2022</p>
-        </div>
-    </div>
-
 </body>
 </html>
