Page information and layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <div class="header">
         <ul class="left-header">
             Header logo
@@ -17,6 +20,7 @@
             <li>Header Link Three</li>
         </ul>
     </div>
+
     <div class="first-container">
         <div class="website-info">
             <p class="website-statement">This website is awesome</p>
@@ -24,8 +28,47 @@
             <button class="Sign up">Sign up!</button>
         </div>
         <div class="website-image">
-            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo">
+            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="400">
         </div>
     </div>
+
+    <div class="second-container">
+        <div class="second-container-heading">Some random information</p>
+        <div class="inner-second-container">
+            <div class="info">
+                <div class="text">this is some subtext under an illustration or image 1</div>
+            </div>
+            <div class="info">
+                <div class="text">this is some subtext under an illustration or image 2</div>
+            </div>
+            <div class="info">
+                <div class="text">this is some subtext under an illustration or image 3</div>
+            </div>
+            <div class="info">
+                <div class="text">this is some subtext under an illustration or image 4</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="third-container">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-attribute">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="fourth-container">
+        <div class="coloured-box">
+            <div class="coloured-box-info">
+                <p class="coloured-box-call">Call to action! It's time!</p>
+                <p class="coloured-box-text">Sign up for our product by clicking that button over there!</p>
+            </div>
+            <div class="coloured-box-button">
+                <button class="Sign up">Sign up!</button>
+            </div>
+        </div>
+    </div>
+    
 </body>
+
+
+
 </html>
