Adding style to the landing-page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 
     <div class="header">
-        <ul class="left-header">
+        <ul class="header-logo">
             Header logo
         </ul>
-        <ul class="right-header">
+        <ul class="header-link">
             <li>Header Link One</li>
             <li>Header Link Two</li>
             <li>Header Link Three</li>
@@ -25,15 +25,15 @@
         <div class="website-info">
             <p class="website-statement">This website is awesome</p>
             <p class="website-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="Sign up">Sign up!</button>
+            <button class="button">Sign up!</button>
         </div>
         <div class="website-image">
-            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="400">
+            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="500">
         </div>
     </div>
 
     <div class="second-container">
-        <div class="second-container-heading">Some random information</p>
+        <div class="second-container-heading">Some random information.</div>
         <div class="inner-second-container">
             <div class="info">
                 <div class="text">this is some subtext under an illustration or image 1</div>
@@ -62,10 +62,14 @@
                 <p class="coloured-box-text">Sign up for our product by clicking that button over there!</p>
             </div>
             <div class="coloured-box-button">
-                <button class="Sign up">Sign up!</button>
+                <button class="button2">Sign up</button>
             </div>
         </div>
     </div>
+
+    <duv class="footer">
+        <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
+    </duv>
     
 </body>
 
