--- a/index.html
+++ b/index.html
@@ -12,47 +12,56 @@
 
     <div class="header">
         <ul class="header-logo">
-            Header logo
+            Jordan Mowlai
         </ul>
         <ul class="header-link">
-            <li>Header Link One</li>
-            <li>Header Link Two</li>
-            <li>Header Link Three</li>
+            <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">GSLP</a></li>
+            <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">SL 5x5</a></li>
+            <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">SS</a></li>
         </ul>
     </div>
 
     <div class="first-container">
         <div class="website-info">
-            <p class="website-statement">This website is awesome</p>
-            <p class="website-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <p class="website-statement">About myself</p>
+            <p class="website-subtext">Graduated in 2019 with a bachelor of Science, double major in Mathematics and Statistics. Currently working as a technical consultant for a software company.</p>
+            <p class="website-subtext">Hobbies include film photography (first ever photo from 2020 on the right), rock-climbing and very recently gym for rehabilitation for my ankle</p>
             <button class="button">Sign up!</button>
         </div>
         <div class="website-image">
-            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="500">
+            <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="400">
         </div>
     </div>
 
     <div class="second-container">
-        <div class="second-container-heading">Some random information.</div>
+        <div class="second-container-heading">The Four Big Lifts</div>
         <div class="inner-second-container">
             <div class="info">
-                <div class="text">this is some subtext under an illustration or image 1</div>
+                <img class="info-img" src="./images/Squat-Silhouette-PNG-Transparent-Image.png">
+                <div class="text-heading">Squat</div>
+                <div class="text">The standard back squat is core in many beginner programs as it strengthens the posterier chain</div>
             </div>
             <div class="info">
-                <div class="text">this is some subtext under an illustration or image 2</div>
+                <img class="info-img" src="./images/deadlift-silhouette.png">
+                <div class="text-heading">Deadlift</div>
+                <div class="text">I prefer the standard deadlift position over the sumo deadlift as I believe the sumo stance does not have the same physiological benefits as the traditional method</div>
             </div>
             <div class="info">
-                <div class="text">this is some subtext under an illustration or image 3</div>
+                <img class="info-img" src="./images/benchpress-silhouette.png">
+                <div class="text-heading">Benchpress</div>
+                <div class="text">When I think of individuals going to the gym, I think of the benchpress as the go-to exercise</div>
             </div>
             <div class="info">
-                <div class="text">this is some subtext under an illustration or image 4</div>
+                <img class="info-img" src="./images/overhead-press-silhouette.png">
+                <div class="text-heading">Overhead Press</div>
+                <div class="text">Easily my weakest of the 4 main compound lifts. Additionally when I fully extend my arms over my head I have a click in my left shoulder</div>
             </div>
         </div>
     </div>
 
     <div class="third-container">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quote-attribute">-Thor, God of Thunder</p>
+        <p class="quote">Your struggles develop your strength. When you go through hardship and decide not to surrender, that is strength</p>
+        <p class="quote-attribute">-Arnold Schwarzenegger, Terminator</p>
     </div>
 
     <div class="fourth-container">
@@ -67,9 +76,9 @@
         </div>
     </div>
 
-    <duv class="footer">
+    <div class="footer">
         <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
-    </duv>
+    </div>
     
 </body>
 
