Adding more style changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </ul>
         <ul class="header-link">
             <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">GSLP</a></li>
-            <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">SL 5x5</a></li>
-            <li><a href="https://physiqz.com/workout-routines/powerbuilding-programs/greyskull-lp-best-powerbuilding-routine-beginners-gslp/">SS</a></li>
+            <li><a href="https://stronglifts.com/5x5/">SL 5x5</a></li>
+            <li><a href="hhttps://startingstrength.com/">SS</a></li>
         </ul>
     </div>
 
