Final result for landing-page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <p class="website-statement">About myself</p>
             <p class="website-subtext">Graduated in 2019 with a bachelor of Science, double major in Mathematics and Statistics. Currently working as a technical consultant for a software company.</p>
             <p class="website-subtext">Hobbies include film photography (first ever photo from 2020 on the right), rock-climbing and very recently gym for rehabilitation for my ankle</p>
-            <button class="button">Sign up!</button>
+            <p class="website-subtext">In the top right of the page, I have linked various beginner strength training programs. Below I have illustrations that showcase the four main lifts most programs choose to run.</p>
+            <button class="button">Sign up</button>
         </div>
         <div class="website-image">
             <img src="images/jmowlai-first-film-photo.JPG" alt="first-ever-film-photo" width="400">
@@ -77,7 +78,7 @@
     </div>
 
     <div class="footer">
-        <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
+        <p class="footer-text">Jordan Mowlai, 2022</p>
     </div>
     
 </body>
